syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract;
import "google/protobuf/timestamp.proto";


// Classes System Definitions

message Student {
  string studentId = 1;
  string studentName = 2;
}

message ClassState {
  int32 capacity = 1;
  bool openEnrollments = 2;
  repeated Student enrolled = 3;
  repeated Student discarded = 4;
}

message Server {
  string host = 1;
  int32 port = 2;
  repeated string qualifier = 3;
  int32 id = 4;
}

message Command {
  google.protobuf.Timestamp timestamp = 1;
  string command = 2;
}

enum ResponseCode {
  OK = 0;
  NON_EXISTING_STUDENT = 1;
  FULL_CLASS = 2;
  STUDENT_ALREADY_ENROLLED = 3;
  ENROLLMENTS_ALREADY_OPENED = 4;
  ENROLLMENTS_ALREADY_CLOSED = 5;
  INACTIVE_SERVER = 6;
  WRITING_NOT_SUPPORTED = 7;
}
