syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.student;

import "ClassesDefinitions.proto";

// Student -> ClassServer Service

message ListClassRequest {
  string studentID = 1;
  bool isEnrolled = 2;
}

message ListClassResponse {
  ResponseCode code = 1;
  ClassState classState = 2;
}

message EnrollRequest {
  Student student = 1;
}

message EnrollResponse {
  ResponseCode code = 1;
}


service StudentService {
  rpc listClass(ListClassRequest) returns (ListClassResponse);
  rpc enroll(EnrollRequest) returns (EnrollResponse);
}
